<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/connectivity"
        android:checked="false"
        android:checkable="false"
        android:title="@string/connectivity" />

    <group android:checkableBehavior="single"
        android:id="@+id/control_group"
        android:enabled="false">
        <!--android:enabled="false">-->
        <item
            android:id="@+id/main_ctrl"
            android:checked="false"
            android:checkable="false"
            android:title="@string/main_ctrl"
            />
        <item
            android:id="@+id/sliders"
            android:checked="false"
            android:checkable="false"
            android:title="@string/sliders" />
        <item
            android:id="@+id/ping"
            android:checked="false"
            android:checkable="false"
            android:title="@string/ping" />
        <item
            android:id="@+id/sequence"
            android:checked="false"
            android:checkable="false"
            android:title="@string/sequence"
            />
        <item
            android:id="@+id/settings"
            android:checked="false"
            android:checkable="false"
            android:title="@string/settings"
            />
    </group>

    <item
        android:id="@+id/about"
        android:checked="false"
        android:checkable="false"
        android:title="@string/about" />

</menu>