<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ConnectivityFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/status_scroll_view"
        android:background="@color/black">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/status"
            android:background="@color/transparent"
            android:textSize="16sp"
            android:textColor="@color/green"
            />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/status_scroll_view">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:enabled="false"
            android:id="@+id/connect_button" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/clear_button" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_log"
            android:id="@+id/saving_button"
            />
    </LinearLayout>


</RelativeLayout>
